--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="col-12 col-md-6 margin-1">
                 <div class="welcome-text">
                   <h2 data-animation="fadeInUp" data-delay="100ms" class="mb-30">
-                    First ever electric bike
+                    First ever electric bike ayush 
                     <br>service dedicated to
                     <br><span>Delhi Metro</span> travellers
                   </h2>
