--- a/AboutUs.html
+++ b/AboutUs.html
@@ -77,6 +77,14 @@
     
   <section>
 
+    <h2 class="page-margin">
+      About Us
+    </h2>
+
+    <P>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus quasi culpa laboriosam ipsum libero! Dolore veritatis ad ab temporibus molestiae deleniti fuga libero quos, in praesentium, porro doloribus saepe sed aperiam facere perspiciatis sapiente doloremque laborum, consequatur asperiores? Tempore sequi beatae laborum explicabo qui exercitationem laboriosam modi dolores delectus perferendis!
+    </P>
+
 
   </section>
 
@@ -99,8 +107,8 @@
             <div class="col-md-3">
                 
                 <ul class="list-unstyled text-light">
-                    <li><a href="#"><h4>FAQs</h4></a></li>
-                    <li><a href="#"><h4>Privacy Policy</h4></a></li>
+                    <li><a href="faq.html"><h4>FAQs</h4></a></li>
+                    <li><a href="privacy.html"><h4>Privacy Policy</h4></a></li>
                     <li><a href="#"><h4>Terms & Conditions</h4></a></li>
                 </ul>
             </div>
