--- a/faq.html
+++ b/faq.html
@@ -97,8 +97,8 @@
           <div class="col-md-3">
               
               <ul class="list-unstyled text-light">
-                  <li><a href="#"><h4>FAQs</h4></a></li>
-                  <li><a href="#"><h4>Privacy Policy</h4></a></li>
+                  <li><a href="faq.html"><h4>FAQs</h4></a></li>
+                  <li><a href="privacy.html"><h4>Privacy Policy</h4></a></li>
                   <li><a href="#"><h4>Terms & Conditions</h4></a></li>
               </ul>
           </div>
