--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <!-- <p>Lorem ipsum dolor sit amet, consetetur sadipscing esed diam nonumy eirmod
                                       tempor invidunt ut labore et dolore magna.</p> -->
             <br>
-            <h3>Redefining mobility by empowering Men & Women
+            <h3>Redefining mobility by empowering Women & Men
             </h3>
             <p class="desc-font-size">Rydr is more than just a ride sharing platform; it’s a movement dedicated to providing safe, reliable and
               empowering transportation for women. Our 100% electric vehicles fleet, driven by women for women and by
@@ -624,8 +624,8 @@
           <div class="col-md-3">
               
               <ul class="list-unstyled text-light">
-                  <li><a href="#"><h4>FAQs</h4></a></li>
-                  <li><a href="#"><h4>Privacy Policy</h4></a></li>
+                  <li><a href="faq.html"><h4>FAQs</h4></a></li>
+                  <li><a href="privacy.html"><h4>Privacy Policy</h4></a></li>
                   <li><a href="#"><h4>Terms & Conditions</h4></a></li>
               </ul>
           </div>
