--- a/Initiative.html
+++ b/Initiative.html
@@ -83,7 +83,7 @@
     <div class="initiative-top">
       <div class="initi-head col ">
         <h1 class="text-center">
-          Reducing emissions – together</h1>
+          Reducing emissions – Together</h1>
           <p class="details">it's important that we take action to reduce the impact of pollution in the city we love. Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing carbon emission by booking a ride with us.</p>
       </div>
       <div class=" col">
@@ -97,7 +97,7 @@
   <section class="page-margin">
 <div class="center-content">
   <div class="content-head">
-    <h1>How we’re reducing emissions</h1>
+    <h1 class="text-center">How we’re reducing Emissions</h1>
   </div>
 
   <div class="methods section-margin">
