--- a/Initiative.html
+++ b/Initiative.html
@@ -104,23 +104,29 @@
 
     <div class="method-card">
       <img src="images/demo/leaf.png" alt="">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
-      </p>
+      <div class="methods-desc">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
+        </p>
+      </div>
     </div>
 
     <div class="method-card">
       <img src="images/demo/method-2.png" alt="">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, in autem laborum id quos perspiciatis omnis voluptas iure cumque. Maxime?
-      </p>
+      <div class="methods-desc">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
+        </p>
+      </div>
     </div>
 
     <div class="method-card">
       <img src="images/demo/method-3.png" alt="">
-      <p>
-        Lorem ipsum amet consectetur adipisicing elit. Rem dolorum facilis assumenda ipsum quisquam, autem culpa, quidem nisi non sequi quasi optio eius, quia ad?
-      </p>
+      <div class="methods-desc">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
+        </p>
+      </div>
     </div>
   </div>
 </div>
