--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -80,10 +80,10 @@
   </header>
 
 
-  <section class=" page-margin">
+  <section class=" page-margin font-family-Aileron">
 
     <div class="heading text-center">
-      <h2>Advantages of becoming RYDR Partner</h2>
+      <h2>Advantages of becoming RYDR Partner</h2> 
     </div>
 
     <div class="adv-section d-flex flex-wrap justify-content-center section-margin">
@@ -168,7 +168,7 @@
     </div>
   </section>
 
-  <section class="section-margin text-center">
+  <section class="section-margin text-center font-family-Aileron">
     <h2>Become a Rydr with us</h2>
   <a href="Driver_registration.html">  <button type="button" class="btn btn-primary text-center" id="">Registration</button></a>
 
