--- a/Initiative.html
+++ b/Initiative.html
@@ -84,7 +84,8 @@
       <div class="initi-head col ">
         <h1 class="text-center">
           Reducing emissions – Together</h1>
-          <p class="details">it's important that we take action to reduce the impact of pollution in the city we love. Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing carbon emission by booking a ride with us.</p>
+          <p class="details">it's important that we take action to reduce the impact of pollution in the city we love. Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing carbon emission by booking a ride with us.
+          Rydr's mission is to improve air quality by offering sustainable transportation options. By sharing rides or using electric vehicles, we can significantly reduce carbon footprint and create a healthier environment for everyone. Every Rydr ride booked remove CO2 emissions, making a real difference in our city.</p>
       </div>
       <div class=" col">
         <img class="initi-img" src="images/demo/Emission_together.png" alt="">
@@ -105,7 +106,7 @@
     <div class="method-card">
       <img src="images/demo/leaf.png" alt="">
       <div class="methods-desc">
-        <p>
+        <p class="">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
         </p>
       </div>
@@ -114,7 +115,7 @@
     <div class="method-card">
       <img src="images/demo/method-2.png" alt="">
       <div class="methods-desc">
-        <p>
+        <p class="">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
         </p>
       </div>
@@ -123,7 +124,7 @@
     <div class="method-card">
       <img src="images/demo/method-3.png" alt="">
       <div class="methods-desc">
-        <p>
+        <p class="">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolorum qui repellendus iusto dignissimos voluptates nulla dolor excepturi architecto repudiandae!
         </p>
       </div>
