--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="col-12 col-md-6 margin-1">
                 <div class="welcome-text">
                   <h2 data-animation="fadeInUp" data-delay="100ms" class="mb-30">
-                    First ever <span class="green-text">Electric bike</span>
+                    First ever <em>Electric bike</em>
                     <br>service dedicated to
                     <br><span>Delhi Metro</span> travellers
                   </h2>
@@ -112,7 +112,7 @@
                     <i class="bi bi-dot"></i>
                     <span>Hygienic</span>
                     <i class="bi bi-dot"></i>
-                    <span bg-success>Ride Green</span>
+                    <span bg-success>Green Rides</span>
                   </h5>
 
                   <a href="#" class="btn rydr-btn btn-3">Download Rydr</a>
@@ -215,13 +215,13 @@
 
         <!-- <div class="col-12 col-lg-6"> -->
           <div class="section-margin mt-4 ">
-            <h2 class="text-center section-heading">Raison d'etre - Our Motos</h2>
+            <h2 class="text-center section-heading"> Our Moto</h2>
           </div>
 
           <div class="about-us-content">
 
             <div class="mission-content">
-              <h4>Reducing Emissions- <strong></strong><span class="">Together</span></strong></h3>
+              <h3>Reducing Emissions- <strong></strong><span class="">TOGETHER</span></strong></h3>
               <p class="desc-font-size">it's important that we take action to reduce the impact of pollution in the city
                 we love.
                 Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing
@@ -244,8 +244,8 @@
             </div>
 
             <div class="mission-content">
-              <h4>Empowered Women & Men - <strong> REDIFING MOBILITY</strong>
-              </h4>
+              <h3>Empowered Women & Men -  REDIFING MOBILITY
+              </h3>
               <p class="desc-font-size">Rydr is more than just a ride sharing platforgitm; it’s a movement dedicated to
                 providing safe, reliable and
                 empowering transportation for women. Our 100% electric vehicles fleet, driven by women for women and by
@@ -261,8 +261,8 @@
           <div class="about-us-content mt-5">
             <br>
             <div class="mission-content">
-              <h4>Creating employment opportunities
-              </h4>
+              <h3>Creating employment opportunities
+              </h3>
               <p class="desc-font-size">Empowering man and women who form part of large work force to become self
                 dependent by rendering green
                 ride sharing services</p>
@@ -388,7 +388,7 @@
             <h4 class="heading ">Drive at your
               convenience & maximize
               your earnings</h4>
-            <p class="desc-font-size text-shrink">Make money on your
+            <p class="desc-font-size ">Make money on your
               chosen schedule with
               rides or deliveries or
               both. You can use your
@@ -399,7 +399,7 @@
           <div class="driver-box-2 ">
             <img src="images/demo/get-paid-fast.png" alt="img-2">
             <h4 class="heading ">Get Paid Fast</h4>
-            <p class="desc-font-size text-shrink">Get Weekly Payments
+            <p class="desc-font-size">Get Weekly Payments
               directly in your bank
               accounts.</p>
 
@@ -408,7 +408,7 @@
             <img src="images/demo/support.png" alt="img-3">
             <h4 class="heading ">Get support when
               you need</h4>
-            <p class="desc-font-size text-shrink">
+            <p class="desc-font-size">
               You can reach us
               anytime for any
               support necessary.
@@ -420,7 +420,7 @@
           <div class="driver-box-4 ">
             <img src="images/demo/support.png" alt="img-3">
             <h4 class="heading">Insured Rides</h4>
-            <p class="desc-font-size text-shrink">
+            <p class="desc-font-size">
               All rides are insured.
               Accidental coverage
               and medical benefits
@@ -613,118 +613,97 @@
   <!-- Home-section-ends  -->
 
 
-  <!-- FOOTER SECTION  -->
-  <footer id="footer">
+  <!-- FOOTER SECTION  --><footer id="footer">
     <div class="container">
-      <div class="row flex-row justify-content-center ">
-
-        <div class="col-md-3">
-
-          <ul class="list-unstyled text-light">
-            <li>
-              <h6>Download Customer App</h6>
-              <a class="app-png" href="#"><img src="images/demo/google-play-png-logo-3798.png" alt=""></a>
-              <a class="app-png" href="#"><img src="images/demo/app-store-png-logo-33112.png" alt=""></a>
-            </li>
-
-            <li>
-              <h6 class="mt-3"> Download Driver App</h6>
-            </li>
-            <a class="app-png" href="#"><img src="images/demo/google-play-png-logo-3798.png" alt=""></a>
-          </ul>
-        </div>
-
-        <div class="col-md-3">
-          <!-- <h3>Quick Links</h3> -->
-          <ul class="list-unstyled text-light">
-            <li><a href="index.html">
-                <h6>Home</h6>
-              </a></li>
-            <li><a href="safety.html">
-                <h6>Safety</h6>
-              </a></li>
-            <li><a href="Drive_with_us.html">
-                <h6>Drive with us</h6>
-              </a></li>
-            <li><a href="AboutUs.html">
-                <h6>About us</h6>
-              </a></li>
-            <li><a href="Initiative.html">
-                <h6>Initiative</h6>
-              </a></li>
-          </ul>
-        </div>
-        <div class="col-md-3">
-
-          <div>
-            <ul class="list-unstyled text-light ">
-              <li><a href="faq.html">
-                  <h6>FAQs</h6>
-                </a></li>
-              <li><a href="privacy.html">
-                  <h6>Privacy Policy</h6>
-                </a></li>
-              <li><a href="#">
-                  <h6>Terms & Conditions</h6>
-                </a></li>
-            </ul>
+      <div class="row justify-content-between ">
+          <div class="col-md-4 d-flex gap-5">
+              <ul class="list-unstyled text-light">
+                  <li>
+                      <h6>Download Customer App</h6>
+                      <a class="app-png" href="#"><img src="images/demo/google-play-png-logo-3798.png" alt=""></a>
+                      <a class="app-png" href="#"><img src="images/demo/app-store-png-logo-33112.png" alt=""></a>
+                  </li>
+                  <li>
+                      <h6 class="mt-3"> Download Driver App</h6>
+                      <a class="app-png" href="#"><img src="images/demo/google-play-png-logo-3798.png" alt=""></a>
+                  </li>
+              </ul>
+              <ul class="list-unstyled text-light">
+                  <li><a href="index.html"><h6>Home</h6></a></li>
+                  <li><a href="safety.html"><h6>Safety</h6></a></li>
+                  <li><a href="Drive_with_us.html"><h6>Drive with us</h6></a></li>
+                  <li><a href="AboutUs.html"><h6>About us</h6></a></li>
+                  <li><a href="Initiative.html"><h6>Initiative</h6></a></li>
+              </ul>
           </div>
-          <div class="address">
-            <h6>Address:</h6>
-            <p>Register Office: 737-738, 7 Floor, Mall of Jaipur, Gandhi Path, W B Block, Vaishali Nagar, Jaipur, Raj
-              302021</p>
-            <P>Head Office:701, 7th Floor, Silverton Towers, A, Golf Course Ext Rd, Sector 50, Gurugram, Haryana 122018
-            </P>
-            <p>Email: reachus@rydr.co.in</p>
-          </div>
-        </div>
 
-        <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
-          <div class="form-heading">
-            <h3>Contact Us</h3>
+          <!-- <div class="col-md-3">
+              <ul class="list-unstyled text-light">
+                  <li><a href="index.html"><h6>Home</h6></a></li>
+                  <li><a href="safety.html"><h6>Safety</h6></a></li>
+                  <li><a href="Drive_with_us.html"><h6>Drive with us</h6></a></li>
+                  <li><a href="AboutUs.html"><h6>About us</h6></a></li>
+                  <li><a href="Initiative.html"><h6>Initiative</h6></a></li>
+              </ul>
+          </div> -->
+          <div class="col-md-3">
+              <ul class="list-unstyled text-light">
+                  <li><a href="faq.html"><h6>FAQs</h6></a></li>
+                  <li><a href="privacy.html"><h6>Privacy Policy</h6></a></li>
+                  <li><a href="#"><h6>Terms & Conditions</h6></a></li>
+              </ul>
+              <div class="address">
+                  <h6>Address:</h6>
+                  <p>Register Office: 737-738, 7 Floor, Mall of Jaipur, Gandhi Path, W B Block, Vaishali Nagar, Jaipur, Raj 302021</p>
+                  <p>Branch Office:G 148 First Floor South City 2, Gurugram, Haryana 122018</p>
+                  <p>Email: reachus@rydr.co.in</p>
+              </div>
           </div>
-          <div class="contact-form">
-            <table class="table-black">
-              <tbody>
-                <tr>
-                  <td><input placeholder="Name" type="text" class="form-control form-input-block"></td>
-                </tr>
-                <tr>
-                  <td><input placeholder="Contact Number" type="number" class="form-control"></td>
-                </tr>
-                <tr>
-                  <td><input placeholder="Email" type="email" class="form-control"></td>
-                </tr>
-                <tr>
-                  <td><textarea placeholder="Message" name="" id="" class="form-control" rows="3"></textarea></td>
-                </tr>
-              </tbody>
-            </table>
+
+          <div class="col-md-3 d-flex flex-column justify-content-center align-items-center">
+              <div class="form-heading">
+                  <h3>Contact Us</h3>
+              </div>
+              <div class="contact-form">
+                  <table class="table-black">
+                      <tbody>
+                          <tr>
+                              <td><input placeholder="Name" type="text" class="form-control form-input-block"></td>
+                          </tr>
+                          <tr>
+                              <td><input placeholder="Contact Number" type="number" class="form-control"></td>
+                          </tr>
+                          <tr>
+                              <td><input placeholder="Email" type="email" class="form-control"></td>
+                          </tr>
+                          <tr>
+                              <td><textarea placeholder="Message" name="" id="" class="form-control" rows="3"></textarea></td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
+              <div class="sub-btn">
+                  <button type="submit" class="btn btn-primary"><span>Contact</span></button>
+              </div>
+             
           </div>
-          <div class="sub-btn">
-            <button type="submit" class="btn btn-primary"><span>Contact</span></button>
+          <div class="col-md-2 ">
+              <ul class="social-icons list-inline d-flex flex-column">
+                  <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i> Facebook</a></li>
+                  <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i> Twitter</a></li>
+                  <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i> Instagram</a></li>
+              </ul>
           </div>
-        </div>
+          
       </div>
       <hr style="border-top: 1px solid rgba(255, 255, 255, 0.2);">
       <div class="row flex-row justify-content-center mt-2">
-        <div class="col-md-12 text-center">
-          <ul class="social-icons list-inline">
-            <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i>fb</a></li>
-            <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i>twitter</a></li>
-            <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i>insta</a></li>
-
-          </ul>
-        </div>
+          <div class="col-md-12 text-center">
+              <p class="copyright-content" style="opacity: 0.6;">&copy; 2024 @ First And last Mile Connectivity India PVT. Limied. All Rights Reserved.</p>
+          </div>
       </div>
-      <div class="row flex-row justify-content-center">
-        <div class="col-md-12 text-center mt-2">
-          <p style="opacity: 0.6;">&copy; 2024 @ First And last Mile Connectivity India PVT. Limied. All Rights
-            Reserved.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
+  </div>
+</footer>
 
 
 
