class-active changes

--- a/Driver_registration.html
+++ b/Driver_registration.html
@@ -55,9 +55,9 @@
     
                 <div class="classynav">
                   <ul id="nav">
-                    <li class="current-item text-decoration-none nav-items"><a href="./index.html">Home</a></li>
+                    <li class=" text-decoration-none nav-items"><a href="./index.html">Home</a></li>
                     <li class="text-decoration-none nav-items"><a href="safety.html">Safety</a></li>
-                    <li class="text-decoration-none nav-items"><a href="Drive_with_us.html">Drive with us</a></li>
+                    <li class="current-item text-decoration-none nav-items"><a href="Drive_with_us.html">Drive with us</a></li>
                     <li class="text-decoration-none nav-items"><a href="AboutUs.html">About Us</a></li>
                     <li class="text-decoration-none nav-items"><a href="Initiative.html">Our Initiatives</a></li>
                   </ul>
