--- a/rider_safety.html
+++ b/rider_safety.html
@@ -235,7 +235,7 @@
               </ul>
               <ul class="list-unstyled text-light">
                   <li><a href="index.html"><h6>Home</h6></a></li>
-                  <li><a href="safety.html"><h6>Safety</h6></a></li>
+                  <li><a href="current-item safety.html"><h6>Safety</h6></a></li>
                   <li><a href="Drive_with_us.html"><h6>Drive with us</h6></a></li>
                   <li><a href="AboutUs.html"><h6>About us</h6></a></li>
                   <li><a href="Initiative.html"><h6>Initiative</h6></a></li>
