--- a/Initiative.html
+++ b/Initiative.html
@@ -49,11 +49,11 @@
 
             <div class="classynav">
               <ul id="nav">
-                <li class="current-item text-decoration-none nav-items"><a href="./index.html">Home</a></li>
+                <li class=" text-decoration-none nav-items"><a href="./index.html">Home</a></li>
                 <li class="text-decoration-none nav-items"><a href="safety.html">Safety</a></li>
                 <li class="text-decoration-none nav-items"><a href="Drive_with_us.html">Drive with us</a></li>
                 <li class="text-decoration-none nav-items"><a href="AboutUs.html">About Us</a></li>
-                <li class="text-decoration-none nav-items"><a href="Initiative.html">Our Initiatives</a></li>
+                <li class="current-item text-decoration-none nav-items"><a href="Initiative.html">Our Initiatives</a></li>
               </ul>
 
               <!-- <div class="get-a-quote ml-4 mr-3" data-toggle="modal" data-target="#download_rydr">
