--- a/safety.html
+++ b/safety.html
@@ -51,8 +51,8 @@
     
                 <div class="classynav">
                   <ul id="nav">
-                    <li class="current-item text-decoration-none nav-items"><a href="./index.html">Home</a></li>
-                    <li class="text-decoration-none nav-items"><a href="safety.html">Safety</a></li>
+                    <li class=" text-decoration-none nav-items"><a href="./index.html">Home</a></li>
+                    <li class="current-item text-decoration-none nav-items"><a href="safety.html">Safety</a></li>
                     <li class="text-decoration-none nav-items"><a href="Drive_with_us.html">Drive with us</a></li>
                     <li class="text-decoration-none nav-items"><a href="AboutUs.html">About Us</a></li>
                     <li class="text-decoration-none nav-items"><a href="Initiative.html">Our Initiatives</a></li>
@@ -92,7 +92,7 @@
                         <h5 class="card-title">For Customer</h5>
                         <p class="card-text">rides is tracked by Rydr, with access to latitude and longitude
                             Data. </p>
-                        <a href="customer.html" class="btn">Know More</a>
+                        <a href="customer.html" class="know-more">Know More</a>
                     </div>
                 </div>
 
@@ -102,7 +102,7 @@
                         <h5 class="card-title">For Drivers</h5>
                         <p class="card-text">From hiring, to monitoring, to ongoing checks, we take all
                             necessary steps to ensure our Riders safety.</p>
-                        <a href="rider_safety.html" class="btn">Know More</a>
+                        <a href="rider_safety.html" class="know-more">Know More</a>
                     </div>
                 </div>
 
