--- a/faq.html
+++ b/faq.html
@@ -48,7 +48,7 @@
 
             <div class="classynav">
               <ul id="nav">
-                <li class="current-item text-decoration-none nav-items"><a href="./index.html">Home</a></li>
+                <li class="text-decoration-none nav-items"><a href="./index.html">Home</a></li>
                 <li class="text-decoration-none nav-items"><a href="safety.html">Safety</a></li>
                 <li class="text-decoration-none nav-items"><a href="Drive_with_us.html">Drive with us</a></li>
                 <li class="text-decoration-none nav-items"><a href="AboutUs.html">About Us</a></li>
@@ -156,9 +156,9 @@
             </div>
            
         </div>
-        <div class="col-md-1 d-flex align-items-center justify-content-center ">
+        <div class="col-md-1 d-flex align-items-center justify-content-center mt-2 ">
           
-            <ul class="social-icons list-inline d-flex flex-column">
+            <ul class="social-icons list-inline d-flex flex-column  mt-2">
                 <li class="list-inline-item"><a href="#"><img src="images/demo/insta.png" alt=""></a></li>
                 <li class="list-inline-item"><a href="#"><img src="images/demo/fb.png" alt=""></a></li>
                 <li class="list-inline-item"><a href="#"><img src="images/demo/twitter.png" alt=""></a></li>
