--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <span bg-success>Green Rides</span>
                   </h5>
 
-                  <a href="#" class="btn rydr-btn btn-3 banner-btn-1">Download Rydr</a>
+                  <a href="#" class="btn rydr-btn btn-3 banner-btn-1 ">Download Rydr</a>
                   <a href="#" class="btn rydr-btn btn-3 banner-btn-2">SignUp as
                     Driver</a>
                 </div>
@@ -349,7 +349,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active" id="customer-part">
         <!-- crousal edit  -->
-        <div class="customer-cards section-margin container-fluid col-md-9">
+        <div class="customer-cards section-margin container-fluid col-md-7">
 
           <div class="cust-box-1">
             <!-- <img src="images/riding-bike.jpg" alt="img-1"> -->
@@ -363,7 +363,7 @@
               <div class="card" style="background-color: #ffd7d7;" >
                 <img src="images/Rider image-04.png" alt="img-1">
                 <div class="card-body">
-                  <h5 class="">Easy Pick &Drop from & to Any Metro station</h5>
+                  <h5 class="">Easy Pick & Drop from & to Any Metro station</h5>
                   <p class="card-text  ">pick you up from any Metro
                     Station and Drop you at your
                     destination and Vice-Versap</p>
@@ -423,11 +423,11 @@
 
 
       <div class="carousel-item" id="driver-part">
-        <div class="driver-cards section-margin container-fluid col-md-9">
+        <div class="driver-cards section-margin container-fluid col-md-10">
           <div class="driver-box-1">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-1">
+              <img src="images/demo/drive-at.png" alt="img-1">
               <div class="card-body">
                 <h5 class="">Drive at your
                   convenience & maximize
@@ -454,10 +454,10 @@
               rental through Rydr.</p> -->
 
           </div>
-          <div class="driver-box-2">
+          <div class="driver-box-2 ">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-2">
+              <img src="images/demo/get-paid-fast.png" alt="img-2">
               <div class="card-body">
                 <h5 class="">Get Paid Fast</h5>
                 <p class="card-text  ">Get Weekly Payments
@@ -477,7 +477,7 @@
           <div class="driver-box-3 ">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-3">
+              <img src="images/demo/support.png" alt="img-3">
               <div class="card-body">
                 <h5 class="">Get support when
                   you need</h5>
@@ -503,7 +503,7 @@
           <div class="driver-box-4 ">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/Rider image-04.png" alt="img-3">
+              <img src="images/demo/insurance.png" alt="img-3">
               <div class="card-body">
                 <h5 class="">Insured Rides</h5>
                 <p class="card-text  ">All rides are insured.
@@ -784,14 +784,14 @@
                       </tbody>
                   </table>
               </div>
-              <div class="sub-btn">
+              <div class="sub-btn mt-3">
                   <button type="submit" class="btn btn-primary"><span>Contact</span></button>
               </div>
              
           </div>
-          <div class="col-md-1 d-flex align-items-center justify-content-center ">
+          <div class="col-md-1 d-flex align-items-center justify-content-center  mt-2">
             
-              <ul class="social-icons list-inline d-flex flex-column">
+              <ul class="social-icons list-inline d-flex flex-column mt-2">
                   <li class="list-inline-item"><a href="#"><img src="images/demo/insta.png" alt=""></a></li>
                   <li class="list-inline-item"><a href="#"><img src="images/demo/fb.png" alt=""></a></li>
                   <li class="list-inline-item"><a href="#"><img src="images/demo/twitter.png" alt=""></a></li>
