--- a/safety.html
+++ b/safety.html
@@ -79,7 +79,7 @@
     <section class="page-margin">
         <div class="safety-bottom section-margin">
             <div class="center-head">
-                <div class="safety-page-heading">
+                <div class="safety-page-heading " style="margin-top: 7rem;">
                     <h4 class="text-center section-margin">We ensure the well being of both, our Customers and Drivers
                     </h4>
                 </div>
@@ -189,9 +189,9 @@
               </div>
              
           </div>
-          <div class="col-md-1 d-flex align-items-center justify-content-center ">
+          <div class="col-md-1 d-flex align-items-center justify-content-center  mt-2 ">
             
-              <ul class="social-icons list-inline d-flex flex-column">
+              <ul class="social-icons list-inline d-flex flex-column  mt-2">
                   <li class="list-inline-item"><a href="#"><img src="images/demo/insta.png" alt=""></a></li>
                   <li class="list-inline-item"><a href="#"><img src="images/demo/fb.png" alt=""></a></li>
                   <li class="list-inline-item"><a href="#"><img src="images/demo/twitter.png" alt=""></a></li>
