--- a/AboutUs.html
+++ b/AboutUs.html
@@ -16,7 +16,9 @@
 
   <!-- --  -->
   <link rel="stylesheet" href="second.css">
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
 
   <!-- Responsive  -->
 
@@ -26,7 +28,7 @@
   <link rel="stylesheet" href="responsive/Utilities.css">
   <link rel="stylesheet" href="responsive/responsive.xl.css">
   <!-- --  -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+ 
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
@@ -89,6 +91,7 @@
   </section>
 
   <!-- FOOTER SECTION  -->
+  
   
   <footer id="footer">
     <div class="container">
@@ -160,13 +163,13 @@
                   </table>
               </div>
               <div class="sub-btn">
-                  <button type="submit" class="btn btn-primary"><span>Contact</span></button>
+                  <button type="submit" class="btn btn-primary mt-2"><span>Contact</span></button>
               </div>
              
           </div>
           <div class="col-md-1 d-flex align-items-center justify-content-center ">
             
-              <ul class="social-icons list-inline d-flex flex-column">
+              <ul class="social-icons list-inline d-flex flex-column mt-2">
                   <li class="list-inline-item"><a href="#"><img src="images/demo/insta.png" alt=""></a></li>
                   <li class="list-inline-item"><a href="#"><img src="images/demo/fb.png" alt=""></a></li>
                   <li class="list-inline-item"><a href="#"><img src="images/demo/twitter.png" alt=""></a></li>
