--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Drive With Us</title>
+  <title>Drive_with_us</title>
 
   <link rel="icon" href="images/favicon/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,6 +17,8 @@
   <!-- --  -->
   <link rel="stylesheet" href="second.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
   <!-- Responsive  -->
 
@@ -26,13 +28,9 @@
   <link rel="stylesheet" href="responsive/Utilities.css">
   <link rel="stylesheet" href="responsive/responsive.xl.css">
   <!-- --  -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-
-
-
 </head>
 
 <body>
@@ -82,7 +80,7 @@
 
   <section class=" page-margin font-family-Aileron">
 
-    <div class="heading text-center">
+    <div class="heading second-top text-center" style="margin-top: 7rem;">
       <h2>Advantages of becoming RYDR Partner</h2> 
     </div>
 
@@ -252,9 +250,9 @@
             </div>
            
         </div>
-        <div class="col-md-1 d-flex align-items-center justify-content-center ">
+        <div class="col-md-1 d-flex align-items-center justify-content-center  mt-2">
           
-            <ul class="social-icons list-inline d-flex flex-column">
+            <ul class="social-icons list-inline d-flex flex-column  mt-2">
                 <li class="list-inline-item"><a href="#"><img src="images/demo/insta.png" alt=""></a></li>
                 <li class="list-inline-item"><a href="#"><img src="images/demo/fb.png" alt=""></a></li>
                 <li class="list-inline-item"><a href="#"><img src="images/demo/twitter.png" alt=""></a></li>
