--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               <div class="card" style="background-color: #ffd7d7;" >
                 <img src="images/Rider image-04.png" alt="img-1">
                 <div class="card-body">
-                  <h5 class="">Easy Pick & Drop from & to Any Metro station</h5>
+                  <h5 class="">Easy pick & drop from & to any metro station</h5>
                   <p class="card-text  ">pick you up from any Metro
                     Station and Drop you at your
                     destination and Vice-Versap</p>
@@ -399,7 +399,7 @@
             <div class="card" style="background-color: #ffd7d7;" >
               <img src="images/Rider image-04.png" alt="img-3">
               <div class="card-body">
-                <h5 class="">Assured Rides</h5>
+                <h5 class="">Assured rides</h5>
                 <p class="card-text  ">Get assured rides from any
                   metro station to your
                   destination and vice versa, in
@@ -459,7 +459,7 @@
             <div class="card" style="background-color: #ffd7d7;" >
               <img src="images/demo/get-paid-fast.png" alt="img-2">
               <div class="card-body">
-                <h5 class="">Get Paid Fast</h5>
+                <h5 class="">Get paid fast</h5>
                 <p class="card-text  ">Get Weekly Payments
                   directly in your bank
                   accounts.</p>
