--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           <h3>What is in it for you</h3>
         </div>
         <div class="box-2">
-          <div class="bottom-box right-border customers active">
+          <div class="bottom-box  customers active">
             <h4>Customers</h4>
           </div>
           <div class="bottom-box drivers-riders">
@@ -427,7 +427,7 @@
           <div class="driver-box-1">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/demo/drive-at.png" alt="img-1">
+              <img src="images/Rider image-04.png" alt="img-1">
               <div class="card-body">
                 <h5 class="">Drive at your
                   convenience & maximize
@@ -457,7 +457,7 @@
           <div class="driver-box-2 ">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/demo/get-paid-fast.png" alt="img-2">
+              <img src="images/Rider image-04.png" alt="img-2">
               <div class="card-body">
                 <h5 class="">Get paid fast</h5>
                 <p class="card-text  ">Get Weekly Payments
@@ -477,7 +477,7 @@
           <div class="driver-box-3 ">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/demo/support.png" alt="img-3">
+              <img src="images/Rider image-04.png" alt="img-3">
               <div class="card-body">
                 <h5 class="">Get support when
                   you need</h5>
@@ -503,7 +503,7 @@
           <div class="driver-box-4 ">
 
             <div class="card" style="background-color: #ffd7d7;" >
-              <img src="images/demo/insurance.png" alt="img-3">
+              <img src="images/Rider image-04.png" alt="img-3">
               <div class="card-body">
                 <h5 class="">Insured Rides</h5>
                 <p class="card-text  ">All rides are insured.
