--- a/customer.html
+++ b/customer.html
@@ -11,7 +11,7 @@
 
   <link rel="icon" href="images/favicon/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="css/style.css">
 
   <!-- --  -->
@@ -76,10 +76,13 @@
       </div>
     </div>
   </header>
+
+
+  
   <section class="Safety-section container-fluid">
 
     <div class="safety page-margin" id="safety">
-      <div class="headin text-center">
+      <div class="heading text-center section-margin">
         <h2>Safety</h2>
       </div>
       <!-- <div class="safety-top section-margin">
@@ -102,10 +105,10 @@
       </div> -->
 
 
-      <div class="safety-bottom section-margin">
+      <div class="safety-bottom ">
         <div class="center-head">
           <div class="safety-page-heading">
-            <h4 class="text-center section-margin " style="margin-top: 7rem;">We ensure the well being of our Customers</h4>
+            <h4 class="text-center section-margin ">We ensure the well being of our Customers</h4>
           </div>
         </div>
 
@@ -135,8 +138,8 @@
 
       </div>
 
-      <div class="safety-page section-margin">
-        <div class="safety-cards section-margin ">
+      <div class="safety-page ">
+        <div class="safety-cards  ">
 
           <!-- <div class="saf-card" style="width: 15rem;">
             <img src="images/demo/insurance.png" class="card-img-top" alt="...">
@@ -205,12 +208,12 @@
 
           
 
-          <div class="customer-safety-cards section-margin container-fluid col-md-9 flex-wrap">
+          <div class="customer-safety-cards  container-fluid col-md-9 flex-wrap"  data-aos="zoom-in">
 
             <div class="">
 
 
-              <div class="card" style="background-color:transparent">
+              <div class="card" style="background-color:transparent" data-aos="zoom-in">
                 <img src="images/demo/insurance.png" alt="img-1">
                 <div class="card-body">
                   <h5 class="">Insurance</h5>
@@ -227,7 +230,7 @@
             </div>
             <div class="">
 
-              <div class="card" style="background-color: transparent">
+              <div class="card" style="background-color: transparent" data-aos="zoom-in">
                 <img src="images/demo/support.png" alt="img-2">
                 <div class="card-body">
                   <h5 class="">24 X 7 Customer Support</h5>
@@ -243,7 +246,7 @@
             </div>
             <div class="">
 
-              <div class="card" style="background-color: transparent">
+              <div class="card" style="background-color: transparent" data-aos="zoom-in">
                 <img src="images/demo/sos.png" alt="...">
                 <div class="card-body">
                   <h5 class="card-title ">SOS Number</h5>
@@ -259,7 +262,7 @@
 
             <div class="">
 
-              <div class="card" style="background-color: transparent">
+              <div class="card" style="background-color: transparent" data-aos="zoom-in">
                 <img src="images/demo/rating.png"  alt="...">
                 <div class="card-body">
                   <h5 class="card-title ">Two-way Rating System</h5>
@@ -275,7 +278,7 @@
             </div>
 
             <div class="">
-              <div class="card" style="background-color: transparent">
+              <div class="card" style="background-color: transparent" data-aos="zoom-in">
                 <img src="images/demo/check-in.png" alt="...">
                 <div class="card-body">
                   <h5 class="card-title ">Pro Active Check In</h5>
@@ -430,6 +433,15 @@
     const yearSpan = document.getElementById('year');
     const currentYear = new Date().getFullYear();
     yearSpan.textContent = currentYear;
+  });
+</script>
+
+<!-- AOS Data  -->
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+  AOS.init({
+    offset: 80,
+    duration: 1000,
   });
 </script>
 
