login page added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </div> -->
 
               <div class="login-register-btn mx-3" data-toggle="modal" data-target="#customer-login">
-                <a href="#">
+                <a href="login.html">
                   <i class="bi bi-person-circle"></i>
                   <span class="mb-menu-show">Customer Login/Signup</span>
                 </a>
@@ -84,6 +84,7 @@
 
           </div>
         </nav>
+      
       </div>
     </div>
   </header>
